--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="Marisol Stagnaro - foto-referencia.png">
 </head>
 <body>
+    <div class="Main">
     <section class="contenedor-celular">
 
         <div class="caja-superior">
@@ -27,5 +28,6 @@
             <button class="boton-inicio"></button>
         </div>
     </section>
+    </div>
 </body>
 </html>
